# jigsawn

./: .gitignore  COPYING  Makefile.am  configure.ac
src/: Makefile.am  input-reader.c  input-reader.h  lexer.c  lexer.h  parser.c  parser.h  string-buffer.c  string-buffer.h  utf8.c  utf8.h  value-array.c  value-boolean.c  value-float.c  value-int.c  value-mapping.c  value-null.c  value-object.c  value-string.c  value.c  value.h
src/include/: Makefile.am  jigsawn.h
src/include/jigsawn/: Makefile.am  error.h  parser.h  template.h  value.h
test/: .gitignore  Makefile.am  test-input-reader.c  test-utf8.c
