
AC_INIT(Jigsawn, 0.0.1, fraggle@users.sourceforge.net, jigsawn)
AC_CONFIG_AUX_DIR(autotools)

AM_INIT_AUTOMAKE($PACKAGE_TARNAME, $PACKAGE_VERSION, no-define)

AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_OUTPUT([
    Makefile
    src/Makefile
    src/include/Makefile
    src/include/jigsawn/Makefile
])

