
AM_CFLAGS=-Wall

lib_LTLIBRARIES=libjigsawn.la

libjigsawn_la_SOURCES=                                     \
	input-reader.c         input-reader.h              \
	lexer.c                lexer.h                     \
	parser.c                                           \
	utf8.c                 utf8.h

libjigsawn_la_CFLAGS=-Iinclude

